--- a/CSS/04Selectors/03classSelectors.html
+++ b/CSS/04Selectors/03classSelectors.html
@@ -10,10 +10,13 @@
             color: teal;
             background-color: khaki;
         }
+        .right{
+            text-align: right;
+        }
     </style>
 </head>
 <body>
-    <h1 class="koibhi">Class Selectors (.)</h1>
+    <h1 class="koibhi right">Class Selectors (.)</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex numquam dolores nisi voluptatum impedit dolorum recusandae! Inventore ea maiores fuga laudantium animi labore reprehenderit fugiat nihil, eius neque ducimus dolore.</p>
     <ul class="koibhi">
         <li>Test</li>
