--- a/CSS/06Background/01background.html
+++ b/CSS/06Background/01background.html
@@ -30,6 +30,7 @@
             /* background-clip: content-box; */
             background-clip: padding-box;
             padding: 100px;
+            /* background-repeat: no-repeat; */
 
 
 
@@ -38,9 +39,9 @@
         .background-origin {
             border: 10px dashed red;
             background-image: url(../../Images/banner1.jpg);
-            background-origin: border-box;
+            /* background-origin: border-box; */
             /* background-origin: padding-box; */
-            /* background-origin: content-box; */
+            background-origin: content-box;
             padding: 100px;
             background-repeat: no-repeat;
         }
