--- a/test.html
+++ b/test.html
@@ -6,16 +6,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        p{
-            /* text-orientation: upright; */
-            transform: rotate(-90deg);
-            /* transform-origin: ; */
-  /* transform: rotate(90deg); */
-  color: blueviolet;
+        header{
+            height: 500px;
+            background-color: teal;
+            color: aliceblue;
+        }
+        section{
+            height: 500px;
+            background-color: orange;
+            color: aliceblue;
+
+        }
+        footer{
+            height: 300px;
+            background-color: green;
+            color: aliceblue;
+
         }
     </style>
 </head>
 <body>
-    <p>Chetan Sharma</p>    
+    <header id="header">
+        <ul>
+            <li><a href="#header">Hedaer</a></li>
+            <li><a href="#section1">Section1</a></li>
+            <li><a href="#section2">Section2</a></li>
+            <li><a href="#section3">Section3</a></li>
+            <li><a href="#footer">Footer</a></li>
+        </ul>
+    </header>
+    <section id="section1">
+        <ul>
+            <li><a href="#header">Hedaer</a></li>
+            <li><a href="#section1">Section1</a></li>
+            <li><a href="#section2">Section2</a></li>
+            <li><a href="#section3">Section3</a></li>
+            <li><a href="#footer">Footer</a></li>
+        </ul>
+    </section>
+    <section id="section2">
+        <ul>
+            <li><a href="#header">Hedaer</a></li>
+            <li><a href="#section1">Section1</a></li>
+            <li><a href="#section2">Section2</a></li>
+            <li><a href="#section3">Section3</a></li>
+            <li><a href="#footer">Footer</a></li>
+        </ul>
+    </section>
+    <section id="section3">
+        <ul>
+            <li><a href="#header">Hedaer</a></li>
+            <li><a href="#section1">Section1</a></li>
+            <li><a href="#section2">Section2</a></li>
+            <li><a href="#section3">Section3</a></li>
+            <li><a href="#footer">Footer</a></li>
+        </ul>
+    </section>
+    <footer id="footer">
+        <ul>
+            <li><a href="#header">Hedaer</a></li>
+            <li><a href="#section1">Section1</a></li>
+            <li><a href="#section2">Section2</a></li>
+            <li><a href="#section3">Section3</a></li>
+            <li><a href="#footer">Footer</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
