--- a/CSS/06Background/01background.html
+++ b/CSS/06Background/01background.html
@@ -27,8 +27,8 @@
             border: 10px dotted blue;
             background-image: url(../../Images/banner1.jpg);
             /* background-clip: border-box; */
-            /* background-clip: content-box; */
-            background-clip: padding-box;
+            /* background-clip: padding-box; */
+            background-clip: content-box;
             padding: 100px;
             /* background-repeat: no-repeat; */
 
@@ -43,7 +43,7 @@
             /* background-origin: padding-box; */
             background-origin: content-box;
             padding: 100px;
-            background-repeat: no-repeat;
+            /* background-repeat: no-repeat; */
         }
 
         .background-color {
