--- a/CSS/07fonts.html
+++ b/CSS/07fonts.html
@@ -17,7 +17,7 @@
 
         .font-family {
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-            /* font-family: 'Times New Roman', Times, serif; */
+            font-family: 'Times New Roman', Times, serif;
         }
 
         .font-size {
@@ -71,8 +71,8 @@
 
 <body>
     <h1>Fonts in CSS</h1>
-    <h2 class="sarif">Viren</h2>
-    <h2 class="badmas">Piyush</h2>
+    <h2 class="sarif">Deep</h2>
+    <h2 class="badmas">Utsav</h2>
     <ul>
         <li>font-family</li>
         <li>font-size</li>
